package org.example.model

data class Direccion(
    val calle:String,
    val num:String,
    val puerta:String,
    val cp:String,
    val ciudad:String
)